Gnome: Fix unreadable text in calendar events

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -5711,8 +5711,11 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
 /*******************
  * Calendar events *
 ********************/
-.color-light label, .color-light.timed label {
-  color: #2e3440;
+.color-light.timed label, .color-light .event-popover label {
+  color: #d8dee9;
+  opacity: 1; }
+.color-light label {
+  color: #2a3344;
   opacity: 1; }
 
 /********
